src/tests/fixtures/directives/defineCustomDirectiveLocationInvalid.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * This is my custom directive.
 * @gqlDirective
 * @on WHOOPS
 */
export function customDirective() {}

-----------------
OUTPUT
-----------------
src/tests/fixtures/directives/defineCustomDirectiveLocationInvalid.invalid.ts:4:4 - error: Syntax Error: Unexpected Name "WHOOPS".

4  * @on WHOOPS
     ~~~~~~~~~~
5  */
  ~
